--- a/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
+++ b/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
@@ -53,10 +53,19 @@
     <Compile Include="Form\Form_DangNhap.Designer.cs">
       <DependentUpon>Form_DangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\Form_ThongTinSinhVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\Form_ThongTinSinhVien.Designer.cs">
+      <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form\Form_DangNhap.resx">
       <DependentUpon>Form_DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Form_ThongTinSinhVien.resx">
+      <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
