--- a/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
+++ b/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bus\DangNhap_BUS.cs" />
+    <Compile Include="Class\DangNhap_Class.cs" />
+    <Compile Include="Dao\DangNhap_DAO.cs" />
     <Compile Include="Data Provider\DataProvider.cs" />
     <Compile Include="Form\frm_DangNhap.cs">
       <SubType>Form</SubType>
@@ -59,27 +62,40 @@
     <Compile Include="Form\Form_ThongTinSinhVien.Designer.cs">
       <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\frm_TrangChu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\frm_TrangChu.Designer.cs">
+      <DependentUpon>frm_TrangChu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Class\TrangChu_Class.cs" />
+    <Compile Include="Bus\TrangChu_BUS.cs" />
+    <Compile Include="Dao\TrangChu_DAO.cs" />
     <EmbeddedResource Include="Form\frm_DangNhap.resx">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Form_ThongTinSinhVien.resx">
       <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form\frm_TrangChu.resx">
+      <DependentUpon>frm_TrangChu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -91,11 +107,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Query data\Nhóm07_Quản_Lý_Ký_Túc_Xá.sql" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Bus\" />
-    <Folder Include="Class\" />
-    <Folder Include="Dao\" />
+    <Content Include="Resources\device-icon.png" />
+    <None Include="Resources\Files-icon.png" />
+    <None Include="Resources\setting.png" />
+    <None Include="Resources\Peoples-icon.png" />
+    <None Include="Resources\room-icon.png" />
+    <None Include="Resources\Student-icon.png" />
+    <None Include="Resources\document-icon.png" />
+    <None Include="Resources\home-icon .png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
