--- a/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
+++ b/QuanLyKTX/QuanLyKTX/QuanLyKTX.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bus\DangNhap_BUS.cs" />
+    <Compile Include="Form\frm_CapNhatNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\frm_CapNhatNhanVien.Designer.cs">
+      <DependentUpon>frm_CapNhatNhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Class\DangNhap_Class.cs" />
     <Compile Include="Dao\DangNhap_DAO.cs" />
     <Compile Include="Data Provider\DataProvider.cs" />
@@ -68,16 +74,31 @@
     <Compile Include="Form\frm_TrangChu.Designer.cs">
       <DependentUpon>frm_TrangChu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form\frm_NhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\frm_NhanVien.Designer.cs">
+      <DependentUpon>frm_NhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main\Program.cs" />
+    <Compile Include="Dao\NhanVien_DAO.cs" />
+    <Compile Include="Class\NhanVien_Class.cs" />
+    <Compile Include="Bus\NhanVien_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Class\TrangChu_Class.cs" />
     <Compile Include="Bus\TrangChu_BUS.cs" />
     <Compile Include="Dao\TrangChu_DAO.cs" />
+    <EmbeddedResource Include="Form\frm_CapNhatNhanVien.resx">
+      <DependentUpon>frm_CapNhatNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\frm_DangNhap.resx">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Form_ThongTinSinhVien.resx">
       <DependentUpon>Form_ThongTinSinhVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\frm_NhanVien.resx">
+      <DependentUpon>frm_NhanVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\frm_TrangChu.resx">
       <DependentUpon>frm_TrangChu.cs</DependentUpon>
@@ -107,6 +128,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Query data\Nhóm07_Quản_Lý_Ký_Túc_Xá.sql" />
+    <None Include="Resources\people-icon.png" />
+    <None Include="Resources\remove-icon.png" />
+    <None Include="Resources\add-icon.png" />
+    <None Include="Resources\back-icon.png" />
     <Content Include="Resources\device-icon.png" />
     <None Include="Resources\Files-icon.png" />
     <None Include="Resources\setting.png" />
